navegacion main a listado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Eveniment</string>
+    <string name="title_activity_listado_acont">Eventos</string>
+    <string name="aun_no_has_a_adido_ningun_evento">Aun no has añadido ningun evento</string>
 </resources>
