--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Eveniment</string>
     <string name="title_activity_listado_acont">Eventos</string>
     <string name="aun_no_has_a_adido_ningun_evento">Aun no has añadido ningun evento</string>
+    <string name="title_activity_acerca_de">AcercaDe</string>
 </resources>
